--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.Mobile.cshtml
@@ -1,4 +1,4 @@
-﻿@model CategoryNavigationModel
+﻿@model NavigationModel
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Collections;
@@ -54,7 +54,7 @@
     </div>
 }
 
-@helper CreateMenu(IEnumerable<TreeNode<CategoryNavigationModel.CategoryModel>> nodes, bool isRoot = false)
+@helper CreateMenu(IEnumerable<TreeNode<MenuItem>> nodes, bool isRoot = false)
 {
     var ulAttrs = string.Empty;
     if (isRoot)
@@ -64,12 +64,12 @@
     <ul @(Html.Raw(ulAttrs))>
         @foreach (var node in nodes)
         {
-            var state = Model.GetNodePathState(node);
+            var state = node.GetNodePathState(Model.Path);
             <li class="@GetCssClassForNode(state)">
-                <a href="@Url.RouteUrl("Category", new { SeName = node.Value.SeName })">@node.Value.Name
-                    @if ((node.Value.NumberOfProducts ?? 0) > 0)
+                <a href="@node.Value.GenerateUrl(this.Url)">@node.Value.Text
+                    @if ((node.Value.ElementsCount ?? 0) > 0)
                     {
-                        <text> (@(node.Value.NumberOfProducts))</text>
+                        <text> (@(node.Value.ElementsCount))</text>
                     }
                 </a>
                 @if (ShouldRenderChildren(state))
