--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryNavigation.cshtml
@@ -1,4 +1,4 @@
-﻿@model CategoryNavigationModel
+﻿@model NavigationModel
 @using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Collections;
@@ -54,16 +54,17 @@
     </div>
 }
 
-@helper CreateMenu(IEnumerable<TreeNode<CategoryNavigationModel.CategoryModel>> nodes) {
+@helper CreateMenu(IEnumerable<TreeNode<MenuItem>> nodes) {
     <ul>
         @foreach (var node in nodes)
         {
-            var state = Model.GetNodePathState(node);
+            var state = node.GetNodePathState(Model.Path);
+			var url = node.Value.GenerateUrl(this.Url);
             <li class="@GetCssClassForNode(state)">
-                <a href="@Url.RouteUrl("Category", new { SeName = node.Value.SeName })">@node.Value.Name
-                    @if ((node.Value.NumberOfProducts ?? 0) > 0)
+                <a href="@url">@node.Value.Text
+                    @if ((node.Value.ElementsCount ?? 0) > 0)
                     {
-                        <text> (@(node.Value.NumberOfProducts))</text>
+                        <text> (@(node.Value.ElementsCount))</text>
                     }
                 </a>
                 @if (ShouldRenderChildren(state))
