--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -40,14 +40,14 @@
             </li>
 
             @for (int i = 0; i < Model.CategoryBreadcrumb.Count; i++) {
-				var cat = Model.CategoryBreadcrumb[i];
-				var isLastCategory = cat.Id == Model.Id;
+				var menuItem = Model.CategoryBreadcrumb[i];
+				var isLastCategory = menuItem.EntityId == Model.Id;
                 <li>
                     @if (isLastCategory) {
-                        @cat.Name
+                        @menuItem.Text
 					}
 					else {
-                        <a href="@Url.RouteUrl("Category", new { SeName = cat.SeName })" title="@cat.Name">@cat.Name</a>
+                        <a href="@menuItem.GenerateUrl(this.Url)" title="@menuItem.Text">@menuItem.Text</a>
                         <span class="divider">/</span>
 					}
                 </li>
