--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductBreadcrumb.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductBreadcrumb.cshtml
@@ -10,11 +10,11 @@
     </li>
     @for (int i = 0; i < Model.CategoryBreadcrumb.Count; i++)
     {
-        var catBr = Model.CategoryBreadcrumb[i];
+        var menuItem = Model.CategoryBreadcrumb[i];
         <li>
             <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
-                <a href="@Url.RouteUrl("Category", new { SeName = catBr.SeName })" title="@catBr.Name" itemprop="url">
-                    <span itemprop="title">@catBr.Name</span>
+                <a href="@menuItem.GenerateUrl(this.Url)" title="@menuItem.Text" itemprop="url">
+                    <span itemprop="title">@menuItem.Text</span>
                 </a>
             </span>
             <span class="divider">/</span>
