--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
@@ -12,29 +12,7 @@
         <h1>@T("PrivateMessages.PrivateMessages")</h1>
     </div>
     <div class="page-body">
-        @*
-        @{
-            var selectSentTab = (@Model.SentItemsTabSelected) ? ".tabs('select', 1)" : "";
-        }
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $("#tabs").tabs()@Html.Raw(selectSentTab);
-            });
-        </script>
-        <div id="tabs">
-            <ul>
-                <li><a href="#tabs-1">@T("PrivateMessages.Inbox")</a></li>
-                <li><a href="#tabs-2">@T("PrivateMessages.SentItems")</a></li>
-            </ul>
-            <div id="tabs-1">
-                @Html.Action("Inbox", new { page = Model.InboxPage, tab = "inbox" })
-            </div>
-            <div id="tabs-2">
-                @Html.Action("SentItems", new { page = Model.SentItemsPage, tab = "sent" })
-            </div>
-        </div>*@
-
-        @Html.SmartStore().TabStrip().Name("product-detail-tabs").Items(x =>
+        @Html.SmartStore().TabStrip().Name("product-detail-tabs").SmartTabSelection(false).Items(x =>
         {
             x.Add().Text(@T("PrivateMessages.Inbox"))
                 .Content( Html.Action("Inbox", new { page = Model.InboxPage, tab = "inbox" }).ToString() )
