--- a/src/Plugins/Api.WebApi/Views/WebApi/Configure.cshtml
+++ b/src/Plugins/Api.WebApi/Views/WebApi/Configure.cshtml
@@ -10,8 +10,8 @@
 @{
     Layout = "";
 
-    Html.AddCssFileParts(Url.Content("~/Plugins/Api.WebApi/Content/smartstore.web.api.css"));
-    Html.AddScriptParts(Url.Content("~/Plugins/Api.WebApi/Scripts/smartstore.web.api.js"));
+    Html.AddCssFileParts(true, Url.Content("~/Plugins/Api.WebApi/Content/smartstore.web.api.css"));
+    Html.AddScriptParts(true, Url.Content("~/Plugins/Api.WebApi/Scripts/smartstore.web.api.js"));
 }
 
 <div class="alert alert-info">
