--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -22,8 +22,8 @@
         "~/Content/jquery.pnotify.default.icons.css");
 
     Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-{version}.js",
-        "~/Scripts/jquery-{version}.js",
+        "~/Scripts/modernizr-2.7.1.js",
+        "~/Scripts/jquery-1.8.3.js",
         "~/Scripts/globalize/globalize.js");
 
     Html.AddScriptParts(ResourceLocation.Head, true,
