#354 Verify that frontend hyperlinks have no missing rel="nofollow"

--- a/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Forum.cshtml
@@ -58,7 +58,7 @@
     <div>
     
         <div class="actions pull-left">
-            <a href='@Url.RouteUrl("TopicCreate", new { id = Model.Id })' class="btn btn-primary newtopic">
+            <a href='@Url.RouteUrl("TopicCreate", new { id = Model.Id })' class="btn btn-primary newtopic" rel="nofollow">
                 <i class="icon-plus"></i>
                 @T("Forum.NewTopic")
             </a>
