--- a/src/Presentation/SmartStore.Web/Views/Catalog/CompareProductsButton.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CompareProductsButton.cshtml
@@ -3,6 +3,7 @@
 <div>
     <a class="ajax-cart-link"
         href="#"
+	    rel="nofollow"
         data-href="@Url.RouteUrl("AddProductToCompare", new { productId = Model.ProductId })"
         data-type="compare"
         data-action="add">
