--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductsAlsoPurchased.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductsAlsoPurchased.cshtml
@@ -21,8 +21,8 @@
                             </article>
                         }
                     </div>
-                    <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#"><</a>
-			        <a class="sb invisible pl-scroll-next sb-dir-right" href="#">></a>
+                    <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
+			        <a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
                 </div>
             </div>
 
