--- a/src/Presentation/SmartStore.Web/Views/Catalog/_FilterPriceBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_FilterPriceBox.cshtml
@@ -45,7 +45,7 @@
                     @FormatPriceRangeText(selectedItem)
                     <p>
                     </p>
-                    <a href="@Model.RemoveFilterUrl" class="remove-price-range-filter">@T("Filtering.PriceRangeFilter.Remove")</a>
+                    <a href="@Model.RemoveFilterUrl" class="remove-price-range-filter" rel="nofollow">@T("Filtering.PriceRangeFilter.Remove")</a>
                 </div>
             }
         </div>
