--- a/src/Presentation/SmartStore.Web/Views/Catalog/_FilterSpecsBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_FilterSpecsBox.cshtml
@@ -43,7 +43,7 @@
                 }
             </div>
             <div class="remove-filter">
-                <a href="@Model.RemoveFilterUrl">@T("Filtering.SpecificationFilter.Remove")</a>
+                <a href="@Model.RemoveFilterUrl" rel="nofollow">@T("Filtering.SpecificationFilter.Remove")</a>
             </div>
         }
     </div>
