--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -265,7 +265,7 @@
                                             Data Source=sqlServerName;Initial Catalog=dbName;Persist Security Info=True;User
                                             ID=userName;Password=password
                                             <br />
-                                            Find more info <a href="http://www.connectionstrings.com/" target="_blank">here</a>
+                                            Find more info <a href="http://www.connectionstrings.com/" rel="nofollow" target="_blank">here</a>
                                         </span>
                                     </div>
                                 </div>
@@ -307,7 +307,7 @@
 
             <div class="container-footer clearfix">
                 <div class="pull-left">
-                    <a class="btn" href="@Url.Action("RestartInstall", "Install")" title="@ILS.GetResource("RestartInstallationTooltip")">
+                    <a class="btn" href="@Url.Action("RestartInstall", "Install")" title="@ILS.GetResource("RestartInstallationTooltip")" rel="nofollow">
                         @ILS.GetResource("RestartInstallation")
                     </a>
                 </div>
