--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutShoppingCart.cshtml
@@ -55,6 +55,7 @@
                     </div>
                     <a class="remove ajax-cart-link"
                         href="#"
+					    rel="nofollow"
                         data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id })'
                         data-name="@item.ProductName"
                         data-type="cart"
