--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -104,8 +104,8 @@
                         </article>
 					}
                 </div>
-                <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#"><</a>
-			    <a class="sb invisible pl-scroll-next sb-dir-right" href="#">></a>
+                <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
+			    <a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
             </div>
             <script type="text/javascript">
                 $(function () {
@@ -203,7 +203,7 @@
 				</div>
                 <div class="modal-body"></div>
                 <div class="modal-footer">
-					<a href="javascript:void(0)" class="remove-checkmarks">@T("Products.Filter.RemoveCheckmarks")</a>
+					<a href="javascript:void(0)" class="remove-checkmarks" rel="nofollow">@T("Products.Filter.RemoveCheckmarks")</a>
 					<button class="btn btn-primary" data-dismiss="modal">@T("Common.OK")</button>
 					<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
                 </div>
