--- a/src/Presentation/SmartStore.Web/Views/Catalog/RelatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/RelatedProducts.cshtml
@@ -19,8 +19,8 @@
                 }
                 </div>
 
-                <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#"><</a>
-		        <a class="sb invisible pl-scroll-next sb-dir-right" href="#">></a>
+                <a class="sb invisible pl-scroll-prev sb-dir-left disabled" href="#" rel="nofollow"><</a>
+		        <a class="sb invisible pl-scroll-next sb-dir-right" href="#" rel="nofollow">></a>
             </div>
         </div>
     </div>
