--- a/src/Presentation/SmartStore.Web/Views/Catalog/_AddToCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_AddToCart.cshtml
@@ -121,6 +121,7 @@
 
                     <a class="btn btn-warning add-to-cart-button ajax-cart-link" 
                         href="#"
+					    rel="nofollow"
                         data-href='@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.AddToCart.ProductId, shoppingCartTypeId = (int)ShoppingCartType.ShoppingCart })' 
                         data-form-selector="#product-details-form"
                         data-type="cart"
