--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBox.cshtml
@@ -24,6 +24,7 @@
             <a class="ajax-cart-link" 
                 data-href='@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
                 href="#"
+			    rel="nofollow"
                 data-form-selector="#product-details-form"
                 data-type="wishlist"
                 data-action="add">
@@ -36,6 +37,7 @@
             <a class="ajax-cart-link pull-right"
                 data-href="@Url.RouteUrl("AddProductToCompare", new { productId = Model.Id })"
                 href="#"
+			    rel="nofollow"
                 data-type="compare"
                 data-action="add">
                 <i class="icon-retweet"></i>
@@ -167,7 +169,7 @@
                 href="#"
                 class="btn btn-warning ajax-cart-link"
                 title="@title" 
-                rel="tooltip"
+                rel="tooltip nofollow"
                 data-type="cart"
                 data-action="add">
                 <i class="icon-shopping-cart"></i>      
