--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -215,6 +215,7 @@
                         <a class="ajax-cart-link" 
                             data-href='@Url.RouteUrl("AddProductToCart-Details", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist })'
                             href="#"
+						    rel="nofollow"
                             data-form-selector="#product-details-form"
                             data-type="wishlist"
                             data-action="add">
@@ -227,6 +228,7 @@
                         <a class="ajax-cart-link"
                             data-href="@Url.RouteUrl("AddProductToCompare", new { productId = Model.Id })"
                             href="#"
+						    rel="nofollow"
                             data-type="compare"
                             data-action="add">
                             <i class="icon-retweet"></i>
@@ -245,6 +247,7 @@
                 {
                     <a data-href='@addtocartlink'
                         href="#"
+					    rel="nofollow"
                         class="btn btn-warning ajax-cart-link"
                         data-type="cart"
                         data-action="add">
