--- a/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
@@ -47,7 +47,7 @@
                 <div class="tracking-number">@T("Order.Shipments.TrackingNumber"):
                     @if (!string.IsNullOrEmpty(Model.TrackingNumberUrl))
                     {
-                        <a href="@Model.TrackingNumberUrl" target="_blank" class="tracking-url">@Model.TrackingNumber</a>
+                        <a href="@Model.TrackingNumberUrl" target="_blank" class="tracking-url" rel="nofollow">@Model.TrackingNumber</a>
                     }
                     else
                     {
