--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/FlyoutWishlist.cshtml
@@ -49,6 +49,7 @@
                     <div class="action pull-left">
                          <a class="btn btn-mini ajax-cart-link" title='@T("ShoppingCart.AddToCart")' 
                              href="#"
+							 rel="nofollow"
                              data-href="@Url.Action("AddOneItemtoCartFromWishlist", "ShoppingCart", new { cartItemId = item.Id })"
                              data-name="@item.ProductName"
                              data-type="cart"
@@ -61,6 +62,7 @@
                     </div>
                     <a class="remove ajax-cart-link" 
                         href="#"
+					    rel="nofollow"
                         data-href='@Url.Action("DeleteCartItem", "ShoppingCart", new { cartItemId = item.Id, wishlistItem = true })' 
                         data-name="@item.ProductName"
                         data-type="wishlist"
